<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MarkDefinition_Triangle" Id="{42950c73-347e-4e7c-859f-806b1921cf57}">
    <Declaration><![CDATA[TYPE ST_MarkDefinition_Triangle :
STRUCT
  bEnabled : BOOL;    // mark is active
  fHeight : REAL;     // triangle height (size Y)
  fLength : REAL;     // triangle lenght (size X)
  bInvertedX : BOOL;  // flipped in X axis (prior bMarksInverted)
  //bInvertedY : BOOL;  // flipped in Y axis 
END_STRUCT 
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>